// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button [common] example testing should match snapshot(s) for basic 1`] = `
<button
  className="lucid-Button"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Default
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 2`] = `
<button
  className="lucid-Button"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    Default
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 3`] = `
<button
  className="lucid-Button lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Default disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 5`] = `
<button
  className="lucid-Button lucid-Button-is-active"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Default active
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 6`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 7`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 8`] = `
<button
  className="lucid-Button lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 9`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 10`] = `
<button
  className="lucid-Button lucid-Button-is-active lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short active
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 11`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 12`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 13`] = `
<button
  className="lucid-Button lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 14`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 15`] = `
<button
  className="lucid-Button lucid-Button-is-active lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small active
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 16`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 17`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 18`] = `
<button
  className="lucid-Button lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 19`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for basic 20`] = `
<button
  className="lucid-Button lucid-Button-is-active lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large active
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 1`] = `
<button
  className="lucid-Button lucid-Button-danger"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 3`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 5`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 6`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 7`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for danger 8`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 1`] = `
<button
  className="lucid-Button lucid-Button-info"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Info
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-info"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 3`] = `
<button
  className="lucid-Button lucid-Button-info lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-info lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 5`] = `
<button
  className="lucid-Button lucid-Button-info lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 6`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-info lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 7`] = `
<button
  className="lucid-Button lucid-Button-info lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for info 8`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-info lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for invisible 1`] = `
<button
  className="lucid-Button lucid-Button-invisible"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for invisible 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-invisible"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Invisible disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for invisible 3`] = `
<button
  className="lucid-Button lucid-Button-invisible"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <PlusIcon />
    Invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for invisible 4`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <PlusIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for link 1`] = `
<button
  className="lucid-Button lucid-Button-link"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for link 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-link"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Link disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for link 3`] = `
<button
  className="lucid-Button lucid-Button-link"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <PlusIcon />
    Link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for link 4`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <PlusIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 1`] = `
<button
  className="lucid-Button lucid-Button-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 3`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 5`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 6`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 7`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for primary 8`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 1`] = `
<button
  className="lucid-Button lucid-Button-success"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Success
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-success"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 3`] = `
<button
  className="lucid-Button lucid-Button-success lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-success lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 5`] = `
<button
  className="lucid-Button lucid-Button-success lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 6`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-success lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 7`] = `
<button
  className="lucid-Button lucid-Button-success lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for success 8`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-success lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 1`] = `
<button
  className="lucid-Button lucid-Button-warning"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Warning
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 2`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-warning"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 3`] = `
<button
  className="lucid-Button lucid-Button-warning lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 4`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-warning lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Short disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 5`] = `
<button
  className="lucid-Button lucid-Button-warning lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 6`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-warning lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Small disabled
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 7`] = `
<button
  className="lucid-Button lucid-Button-warning lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "marginRight": "5px",
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for warning 8`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-warning lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    Large disabled
  </span>
</button>
`;
